# PatientAIProject-NTI-Round-14

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml
apps/agents/shared/: config.py  llm.py  schemas.py
scripts/: bootstrap_structure.py
